force-app/main/default/objects/Customer_Staging__c/Customer_Staging__c.object-meta.xml
<CustomObject>
    <description>Customer staging table used for excel/csv processing</description>
    <label>Customer Staging</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>data_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>