force-app/main/default/objects/Customer_Staging__c/fields/Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line1__c</fullName>
    <description>Primary debtor address 1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>