force-app/main/default/objects/Customer_Staging__c/fields/Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line2__c</fullName>
    <description>Primary debtor address 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>