force-app/main/default/objects/Customer_Staging__c/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <description>Primary debtor cell phone</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>