force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_Address1__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_Address1__c</fullName>
    <description>Co-Debtor address 1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>