force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_Address2__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_Address2__c</fullName>
    <description>Co-Debtor address 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>