force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_Cell_Phone__c</fullName>
    <description>Co-Debtor cell phone</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower Cell Phone</label>
    <type>Phone</type>
</CustomField>