force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_City__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_City__c</fullName>
    <description>Co-Debtor city</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>