force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_Country__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_Country__c</fullName>
    <description>Co-Debtor country</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>