force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_Email__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_Email__c</fullName>
    <description>Co-Debtor email address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>