force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_Home_Phone__c</fullName>
    <description>Co-Debtor home phone</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower Home Phone</label>
    <type>Phone</type>
</CustomField>