force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_Postal_Code__c</fullName>
    <description>Co-Debtor postal/zip code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>