force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_State__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_State__c</fullName>
    <description>Co-Debtor province/state</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>