force-app/main/default/objects/Customer_Staging__c/fields/Coborrower_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Coborrower_Work_Phone__c</fullName>
    <description>Co-Debtor work phone</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-borrower Work Phone</label>
    <type>Phone</type>
</CustomField>