force-app/main/default/objects/Customer_Staging__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Primary debtor division</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>