force-app/main/default/objects/Customer_Staging__c/fields/Document_Storage__c.field-meta.xml
<CustomField>
    <fullName>Document_Storage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document storage</description>
    <label>Document Storage</label>
    <referenceTo>Document_Storage__c</referenceTo>
    <relationshipLabel>Customer Stagings</relationshipLabel>
    <relationshipName>Customer_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>