force-app/main/default/objects/Customer_Staging__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Primary debtor email address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>