force-app/main/default/objects/Customer_Staging__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Value</label>
    <type>TextArea</type>
</CustomField>