force-app/main/default/objects/Customer_Staging__c/fields/Include_in_Processing__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Processing</label>
    <type>Checkbox</type>
</CustomField>