force-app/main/default/objects/Customer_Staging__c/fields/Placement_Agency_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_Lookup__c</fullName>
    <description>Placement Agency Lookup</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Agency Lookup</inlineHelpText>
    <label>Placement Agency Lookup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>