force-app/main/default/objects/Customer_Staging__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Primary debtor postal/zip code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>