force-app/main/default/objects/Customer_Staging__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Primary debtor province/state</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>