force-app/main/default/objects/Customer_Staging__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>Primary debtor work phone</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>