force-app/main/default/objects/Customer_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProdID__c</columns>
    <columns>Coborrower_Address1__c</columns>
    <columns>Coborrower_Address2__c</columns>
    <columns>Coborrower_Cell_Phone__c</columns>
    <columns>Coborrower_City__c</columns>
    <columns>Coborrower_Country__c</columns>
    <columns>Coborrower_Email__c</columns>
    <columns>Country__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Home_Phone__c</columns>
    <columns>Placement_Agency__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>State__c</columns>
    <columns>Work_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>